fix: chrome scrollbar extra space

--- a/client/src/app.css
+++ b/client/src/app.css
@@ -110,9 +110,18 @@
   input[type="search"]::-webkit-search-cancel-button {
     display: none;
   }
-  /* body {
-    min-height: 100dvh;
-  } */
+  
+  html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    overflow-x: hidden; /* Fix for Chrome white space issue, might cause issues later :D */
+  }
+  
+  body {
+    min-width: 100%;
+    max-width: 100vw;
+  }
 }
 
 @layer utilities {
@@ -167,9 +176,6 @@
   * {
     scrollbar-width: thin;
     scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-bg);
-  }
-  html, body {
-    scrollbar-gutter: stable;
   }
 
   @keyframes smoothIn {
